--- a/sass/cabinet-result.scss
+++ b/sass/cabinet-result.scss
@@ -91,16 +91,12 @@
 
 @media only screen and (min-width: $laptop) {
   .cabinet-result {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    visibility: hidden;
     align-items: center;
     flex-wrap: nowrap;
 
     width: auto;
 
-    list-style: none;
-    margin: 0;
     padding-left: 25px;
     padding-right: 30px;
     padding-top: 4px;
@@ -120,15 +116,13 @@
     }
 
     &__item {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
       background-color: transparent;
       border: none;
-      height: 54px;
+
+      min-height: 54px;
+      max-height: 54px;
       width: 100%;
+
       box-shadow: none;
     }
 
@@ -163,70 +157,23 @@
 
 @media only screen and (min-width: $laptop-wide) {
   .cabinet-result {
-    visibility: hidden;
-    display: none;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: nowrap;
-
     max-width: 450px;
     width: auto;
 
-    list-style: none;
-    margin: 0;
     padding-left: 20px;
     padding-top: 8px;
     padding-bottom: 8px;
     padding-right: 30px;
 
-    background-color: rgba(255, 255, 255, 0.4);
-    border-top-left-radius: 45px;
-    border-bottom-left-radius: 45px;
-    border: none;
-
     margin-right: -90px;
     margin-top: -10px;
 
-    &--active {
-      visibility: visible;
-      transition: 0.5s ease-in-out;
-    }
-
     &__item {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      background-color: transparent;
-      border: none;
-
       min-height: 57px;
       max-height: 57px;
-      box-shadow: none;
     }
 
     &__frame {
-      &--empty {
-        background-color: transparent;
-        border: none;
-        box-shadow: none;
-
-        .cabinet-result__image {
-          opacity: 1;
-        }
-      }
-
-      &--full {
-        display: none;
-        background-color: transparent;
-        border: none;
-        box-shadow: none;
-      }
-    }
-
-    &__image {
       min-height: 55px;
       max-height: 55px;
     }
