--- a/sass/event/main-logo.scss
+++ b/sass/event/main-logo.scss
@@ -50,16 +50,11 @@
   .main-logo {
     width: 20%;
 
-    display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-items: flex-start;
 
     padding-top: 10px;
 
     &__link {
-      display: block;
-
       width: 357px;
       height: 210px;
 
@@ -82,6 +77,24 @@
     &__image {
       width: 100%;
       height: auto;
+    }
+  }
+}
+
+@media only screen and (min-width: $laptop-wide)  {
+  .main-logo {
+    &__link {
+      &--gallery {
+        width: 272px;
+        height: 206px;
+      }
+    }
+
+    &__frame {
+      &--gallery {
+        width: 272px;
+        height: 206px;
+      }
     }
   }
 }
