--- a/sass/event/main-upload.scss
+++ b/sass/event/main-upload.scss
@@ -57,8 +57,9 @@
   }
 
   &__avatar {
-    width: 23.5px;
-    height: 20px;
+    width: auto;
+    min-height: 20px;
+    max-height: 20px;
   }
 
   &__name {
@@ -85,102 +86,49 @@
 
 @media only screen and (min-width: $tablet) {
   .main-upload {
-    width: 100%;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
     padding-right: 30px;
     padding-left: 30px;
 
     &__wrapper {
       width: 426px;
 
-      background-color: $bg-white;
       border-radius: 50px;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-
-      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     }
 
     &__details {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      width: 100%;
-
       padding-left: 14px;
       padding-top: 11px;
       padding-bottom: 5px;
-
-      box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__person {
       width: 70px;
       height: 70px;
 
-      border: 4px solid #838383;
-      border-radius: 50%;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      margin-right: 10px;
+      border: 3px solid #838383;
     }
 
     &__avatar {
-      width: 47px;
-      height: 40px;
+      min-height: 40px;
+      max-height: 40px;
     }
 
     &__name {
       font: {
         size: 1.625em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-darkgray;
-      line-height: 1;
-      text-transform: uppercase;
     }
 
     &__bottom {
       height: 72px;
-      width: 100%;
-
-      box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
     }
   }
 }
 
 @media only screen and (min-width: $laptop) {
   .main-upload {
-    width: 100%;
     max-width: 670px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: flex-end;
 
     padding-right: 100px;
@@ -188,168 +136,72 @@
     &__wrapper {
       width: 306px;
 
-      background-color: $bg-white;
       border-radius: 35px;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-
-      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     }
 
     &__details {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      width: 100%;
-
       padding-left: 10px;
       padding-top: 5px;
       padding-bottom: 5px;
-
-      box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__person {
       width: 50px;
       height: 50px;
-
-      border: 3px solid #838383;
-      border-radius: 50%;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      margin-right: 10px;
     }
 
     &__avatar {
       min-height: 29px;
       max-height: 29px;
-      width: auto;
     }
 
     &__name {
       font: {
         size: 1.125em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-darkgray;
-      line-height: 1;
-      text-transform: uppercase;
     }
 
     &__bottom {
       height: 45px;
-      width: 100%;
-
-      box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
     }
   }
 }
 
 @media only screen and (min-width: $laptop-wide) {
   .main-upload {
-    width: 100%;
     max-width: 980px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
-
-    padding-right: 100px;
 
     &__wrapper {
       width: 426px;
 
-      background-color: $bg-white;
       border-radius: 50px;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: center;
-
-      box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -webkit-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
-      -moz-box-shadow: 0px 0px 25px 0px rgba(0,0,0,0.3);
     }
 
     &__details {
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      width: 100%;
-
       padding-left: 14px;
       padding-top: 11px;
       padding-bottom: 5px;
-
-      box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow:0px 3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__person {
       width: 70px;
       height: 70px;
-
-      border: 4px solid #838383;
-      border-radius: 50%;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      margin-right: 10px;
     }
 
     &__avatar {
-      width: 47px;
-      height: 40px;
+      width: auto;
+      min-height: 40px;
+      max-height: 40px;
     }
 
     &__name {
       font: {
         size: 1.625em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-darkgray;
-      line-height: 1;
-      text-transform: uppercase;
     }
 
     &__bottom {
       height: 72px;
-      width: 100%;
-
-      box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow:0px -3px 5px 0px rgba(0,0,0,0.1);
     }
   }
 }
