--- a/sass/gallery/gallery-item.scss
+++ b/sass/gallery/gallery-item.scss
@@ -48,8 +48,9 @@
   }
 
   &__avatar {
-    width: 14px;
-    height: 12.5px;
+    width: auto;
+    min-height: 12.5px;
+    max-height: 12.5px;
   }
 
   &__name {
@@ -82,12 +83,17 @@
     width: 100%;
     height: 110px;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     background-color: #e1e1e1;
   }
 
   &__footer {
-    border-bottom-left-radius: 30px;
-    border-bottom-right-radius: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 
     width: 100%;
 
@@ -155,168 +161,26 @@
 
 @media only screen and (min-width: 414px) {
   .gallery-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-
     width: 160px;
-
-    margin-bottom: 10px;
-
-    &__header {
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-
-      width: 100%;
-
-      padding-top: 3px;
-      padding-left: 0;
-      padding-bottom: 3px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-
-      background-color: $bg-white;
-
-      box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-    }
-
-    &__wrap {
-      width: 21px;
-      height: 21px;
-
-      border-radius: 50%;
-      border: 2px solid #838383;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      margin-right: 10px;
-    }
-
-    &__avatar {
-      width: 14px;
-      height: 12.5px;
-    }
 
     &__name {
       font: {
         size: 0.875em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
-
     }
 
     &__inside {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: stretch;
-
-      width: 100%;
       height: 150px;
-
-      outline: none;
-      cursor: pointer;
     }
 
     &__frame {
-      width: 100%;
       height: 150px;
-
-      background-color: #e1e1e1;
-    }
-
-    &__footer {
-      border-bottom-left-radius: 30px;
-      border-bottom-right-radius: 30px;
-
-      width: 100%;
-
-      background-color: $bg-white;
-
-      padding-left: 10px;
-      padding-right: 10px;
-      padding-top: 6px;
-      padding-bottom: 6px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-
-      box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-    }
-
-    &__like {
-      width: 12.5px;
-      height: 10.5px;
-
-      border: none;
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50;' xml:space='preserve'%3E%3Cpath style='fill:%23ff456d;' d='M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543 c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503 c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
-      background-size: 12.5px 10.5px;
-
-      cursor: pointer;
-      outline: none;
-
-      margin-right: 5px;
-    }
-
-    &__count {
-      font: {
-        size: 0.875em;
-        family: $regular-font;
-        weight: 700;
-      }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
-
-      margin-right: 10px;
-    }
-
-    &__search {
-      width: 15px;
-      height: 15px;
-
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 56.966 56.966' style='enable-background:new 0 0 56.966 56.966;' xml:space='preserve'%3E%3Cpath d='M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
-      background-size: 15px 15px;
-      border: none;
-
-      cursor: pointer;
-      outline: none;
     }
   }
 }
 
 @media only screen and (min-width: $tablet) {
   .gallery-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-
     width: 260px;
 
     margin-bottom: 20px;
@@ -324,8 +188,6 @@
     &__header {
       border-top-left-radius: 30px;
       border-top-right-radius: 30px;
-
-      width: 100%;
 
       padding-top: 5px;
       padding-left: 10px;
@@ -341,8 +203,8 @@
     }
 
     &__avatar {
-      width: 28px;
-      height: 25px;
+      min-height: 25px;
+      max-height: 25px;
     }
 
     &__name {
@@ -362,24 +224,6 @@
     &__footer {
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
-
-      width: 100%;
-
-      background-color: $bg-white;
-
-      padding-left: 10px;
-      padding-right: 10px;
-      padding-top: 6px;
-      padding-bottom: 6px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__like {
@@ -413,11 +257,6 @@
 
 @media only screen and (min-width: $laptop) {
   .gallery-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-
     width: 180px;
 
     margin-bottom: 10px;
@@ -426,37 +265,14 @@
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
 
-      width: 100%;
-
       padding-top: 3px;
       padding-left: 5px;
       padding-bottom: 3px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      background-color: $bg-white;
-
-      box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
     }
 
     &__wrap {
       width: 29px;
       height: 29px;
-
-      border-radius: 50%;
-      border: 2px solid #838383;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
 
       margin-right: 10px;
     }
@@ -464,81 +280,36 @@
     &__avatar {
       min-height: 17px;
       max-height: 17px;
-      width: auto;
     }
 
     &__name {
       font: {
         size: 0.625em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
-
     }
 
     &__inside {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: stretch;
-
-      width: 100%;
       height: 180px;
-
-      outline: none;
-      cursor: pointer;
     }
 
     &__frame {
-      width: 100%;
       height: 180px;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      background-color: #e1e1e1;
     }
 
     &__footer {
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
 
-      width: 100%;
-
-      background-color: $bg-white;
-
       padding-left: 10px;
       padding-top: 3px;
       padding-bottom: 3px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: flex-start;
-      align-items: center;
-
-      box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__like {
       width: 18px;
       height: 14px;
 
-      border: none;
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50;' xml:space='preserve'%3E%3Cpath style='fill:%23ff456d;' d='M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543 c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503 c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
       background-size: 18px 14px;
-
-      cursor: pointer;
-      outline: none;
 
       margin-right: 5px;
     }
@@ -546,13 +317,7 @@
     &__count {
       font: {
         size: 0.625em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
 
       margin-right: 10px;
     }
@@ -561,140 +326,69 @@
       width: 15px;
       height: 15px;
 
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 56.966 56.966' style='enable-background:new 0 0 56.966 56.966;' xml:space='preserve'%3E%3Cpath d='M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
       background-size: 15px 15px;
-      border: none;
-
-      cursor: pointer;
-      outline: none;
     }
   }
 }
 
 @media only screen and (min-width: $laptop-wide) {
   .gallery-item {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: stretch;
-
     width: 260px;
-
-    margin-bottom: 10px;
 
     &__header {
       border-top-left-radius: 30px;
       border-top-right-radius: 30px;
 
-      width: 100%;
 
-      padding-top: 3px;
-      padding-left: 0;
-      padding-bottom: 3px;
-
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-
-      background-color: $bg-white;
-
-      box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px 5px 5px 15px rgba(0,0,0,0.1);
+      padding-top: 5px;
+      padding-left: 10px;
+      padding-bottom: 5px;
     }
 
     &__wrap {
       width: 42px;
       height: 42px;
 
-      border-radius: 50%;
-      border: 3px solid #838383;
-
-      background-color: transparent;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
       margin-right: 10px;
     }
 
     &__avatar {
-      width: 28px;
-      height: 25px;
+      min-height: 25px;
+      max-height: 25px;
     }
 
     &__name {
       font: {
         size: 1em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
-
     }
 
     &__inside {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      align-items: stretch;
-
-      width: 100%;
-      height: 180px;
-
-      outline: none;
-      cursor: pointer;
+      height: 200px;
     }
 
     &__frame {
-      width: 100%;
-      height: 180px;
-
-      background-color: #e1e1e1;
+      height: 200px;
     }
 
     &__footer {
       border-bottom-left-radius: 30px;
       border-bottom-right-radius: 30px;
 
-      width: 100%;
-
-      background-color: $bg-white;
-
-      padding-left: 0;
+      padding-left: 10px;
+      padding-right: 10px;
       padding-top: 6px;
       padding-bottom: 6px;
 
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
-
-      box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -webkit-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
-      -moz-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
     }
 
     &__like {
       width: 25px;
       height: 21px;
 
-      border: none;
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 50 50' style='enable-background:new 0 0 50 50;' xml:space='preserve'%3E%3Cpath style='fill:%23ff456d;' d='M24.85,10.126c2.018-4.783,6.628-8.125,11.99-8.125c7.223,0,12.425,6.179,13.079,13.543 c0,0,0.353,1.828-0.424,5.119c-1.058,4.482-3.545,8.464-6.898,11.503L24.85,48L7.402,32.165c-3.353-3.038-5.84-7.021-6.898-11.503 c-0.777-3.291-0.424-5.119-0.424-5.119C0.734,8.179,5.936,2,13.159,2C18.522,2,22.832,5.343,24.85,10.126z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
       background-size: 25px 21px;
-
-      cursor: pointer;
-      outline: none;
 
       margin-right: 5px;
     }
@@ -702,29 +396,13 @@
     &__count {
       font: {
         size: 1em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-lightblack;
-      text-transform: uppercase;
-      line-height: 1;
-
-      margin-right: 10px;
     }
 
     &__search {
       width: 21px;
       height: 21px;
-
-      background-color: transparent;
-      background-image: url("data:image/svg+xml,%3Csvg version='1.1' id='Capa_1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 56.966 56.966' style='enable-background:new 0 0 56.966 56.966;' xml:space='preserve'%3E%3Cpath d='M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z'/%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3Cg%3E%3C/g%3E%3C/svg%3E%0A");
-      background-repeat: no-repeat;
       background-size: 21px 21px;
-      border: none;
-
-      cursor: pointer;
-      outline: none;
     }
   }
 }
