--- a/sass/gallery/gallery-slide.scss
+++ b/sass/gallery/gallery-slide.scss
@@ -28,6 +28,6 @@
 
 @media only screen and (min-width: $laptop-wide) {
   .gallery-slide {
-    width: 100% !important;
+    width: 260px !important;
   }
 }
