--- a/sass/main-content.scss
+++ b/sass/main-content.scss
@@ -195,37 +195,27 @@
 
 @media only screen and (min-width: $laptop-wide) {
   .main-content {
-    position: relative;
-
     width: 600px;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-
     margin-top: -70px;
+    margin-left: 0;
     /*Страница совета*/
     &--tip {
       margin-top: -80px;
       padding-left: 80px;
     }
+
     /*Заголовок*/
     &__title {
+      width: 600px;
       font: {
         size: 1.875em;
-        family: $regular-font;
-        weight: 700;
       }
 
-      color: $text-white;
-      line-height: normal;
-      text-transform: uppercase;
+      margin-bottom: 20px;
 
-      text-align: center;
       /*Страница совета*/
       &--tip {
-        display: block;
         width: 720px;
 
         margin-bottom: 30px;
@@ -239,20 +229,9 @@
 
       text-align: center;
 
-      background:-webkit-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
-      background:-o-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
-      background:-moz-linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
-      background:linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
-
       font: {
         size: 2.125em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-white;
-      line-height: normal;
-      text-transform: uppercase;
 
       margin-bottom: 30px;
     }
@@ -262,29 +241,11 @@
       width: 196px;
       height: 60px;
 
-      border: none;
       border-radius: 30px;
-
-      background-color: $btn-symbol-submit;
 
       font: {
         size: 2.5em;
-        family: $regular-font;
-        weight: 700;
       }
-
-      color: $text-white;
-      line-height: 1;
-      text-transform: uppercase;
-
-      text-align: center;
-
-      cursor: pointer;
-      outline: none;
-
-      box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
-      -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
-      -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
     }
   }
 }
