--- a/sass/sidebar.scss
+++ b/sass/sidebar.scss
@@ -90,6 +90,8 @@
     padding-top: 10px;
     padding-right: 130px;
 
+    width: 32.2%;
+
     &__logo {
       width: 483px;
       height: 365px;
