--- a/sass/slide-panel.scss
+++ b/sass/slide-panel.scss
@@ -48,6 +48,10 @@
       &--active {
         right: 0;
         transition: 0.5s ease-in-out;
+
+        box-shadow: 0px 0px 13px 1px rgba(0,0,0,0.25);
+        -webkit-box-shadow: 0px 0px 13px 1px rgba(0,0,0,0.25);
+        -moz-box-shadow: 0px 0px 13px 1px rgba(0,0,0,0.25);
       }
 
       &__close {
