--- a/sass/content-wrapper.scss
+++ b/sass/content-wrapper.scss
@@ -10,6 +10,10 @@
 
   margin-bottom: 20px;
 
+  &--hidden {
+    visibility: hidden;
+  }
+
   /*Стилизация элемента*/
   &__item {
     width: 90px;
