--- a/sass/main-content.scss
+++ b/sass/main-content.scss
@@ -88,6 +88,10 @@
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
     -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
     -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.48);
+
+    &--hidden {
+      visibility: hidden;
+    }
   }
 }
 
