--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,6 +46,9 @@
 @import "chars-slider.scss";
 @import "chars-item.scss";
 @import "popup-prize.scss";
+@import "popup-winner.scss";
+@import "winner-slider.scss";
+@import "winner-item.scss";
 @import "prize-slider.scss";
 @import "prize-item.scss";
 @import "popup-player.scss";
